--- a/app/globals.css
+++ b/app/globals.css
@@ -156,3 +156,12 @@ a,
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+.text-inner-shadow {
+  background-color: #0076ca;
+  color: transparent;
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
